--- a/src/view/CreateUserView.fxml
+++ b/src/view/CreateUserView.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
+         <image>
+            <Image url="@../resources/home.png" />
+         </image>
+         <StackPane.margin>
+            <Insets left="25.0" top="25.0" />
+         </StackPane.margin>
+      </ImageView>
       <Label text="Create a New User" textFill="LIGHTGRAY" StackPane.alignment="TOP_RIGHT">
          <font>
             <Font size="48.0" />
@@ -17,7 +25,7 @@
             <Insets right="25.0" top="25.0" />
          </StackPane.margin>
       </Label>
-      <Button mnemonicParsing="false" onAction="#saveUser" prefHeight="70.0" prefWidth="140.0" text="Save" StackPane.alignment="BOTTOM_CENTER">
+      <Button mnemonicParsing="false" onAction="#saveUser" prefHeight="70.0" prefWidth="140.0" style="-fx-border-radius: 50 50 50 50; -fx-background-color: #FFFAFA; -fx-border-color: black; -fx-background-radius: 50;" text="Save" StackPane.alignment="BOTTOM_CENTER">
          <StackPane.margin>
             <Insets bottom="75.0" />
          </StackPane.margin>
@@ -25,7 +33,7 @@
             <Font size="30.0" />
          </font>
       </Button>
-      <Button mnemonicParsing="false" onAction="#backToHome" prefHeight="70.0" prefWidth="70.0" text="Home" StackPane.alignment="TOP_LEFT">
+      <Button mnemonicParsing="false" onAction="#backToHome" opacity="0.0" prefHeight="70.0" prefWidth="70.0" text="Home" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
             <Insets left="25.0" top="25.0" />
          </StackPane.margin>
