--- a/src/view/SwitchUserView.fxml
+++ b/src/view/SwitchUserView.fxml
@@ -43,5 +43,10 @@
             <Insets bottom="25.0" left="25.0" />
          </StackPane.margin>
       </Button>
+      <Label fx:id="zeroLabel" text="0 users found" textFill="LIGHTGRAY">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
    </children>
 </StackPane>
