--- a/src/view/CreateUserView.fxml
+++ b/src/view/CreateUserView.fxml
@@ -7,7 +7,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="panel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
          <image>
@@ -38,7 +38,7 @@
             <Insets left="25.0" top="25.0" />
          </StackPane.margin>
       </Button>
-      <TextField alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="70.0" prefWidth="500.0" promptText="*Name" StackPane.alignment="CENTER">
+      <TextField fx:id="nameText" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="70.0" prefWidth="500.0" promptText="*Name" StackPane.alignment="CENTER">
          <StackPane.margin>
             <Insets bottom="120.0" left="100.0" right="100.0" />
          </StackPane.margin>
@@ -46,7 +46,7 @@
             <Font size="32.0" />
          </font>
       </TextField>
-      <TextField alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="70.0" prefWidth="500.0" promptText="Upload an Image">
+      <TextField fx:id="imgText" alignment="CENTER" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="70.0" prefWidth="500.0" promptText="Upload an Image">
          <StackPane.margin>
             <Insets left="100.0" right="100.0" top="50.0" />
          </StackPane.margin>
