--- a/src/view/SwitchUserView.fxml
+++ b/src/view/SwitchUserView.fxml
@@ -30,9 +30,9 @@
             <Insets bottom="150.0" left="100.0" right="100.0" top="150.0" />
          </StackPane.margin>
       </HBox>
-      <Label text="Available Users" textFill="LIGHTGRAY" StackPane.alignment="TOP_LEFT">
+      <Label fx:id="availableLabel" text="Available Users" textFill="LIGHTGRAY" StackPane.alignment="TOP_LEFT">
          <font>
-            <Font size="48.0" />
+            <Font name="System Bold" size="48.0" />
          </font>
          <StackPane.margin>
             <Insets left="25.0" top="25.0" />
