--- a/src/view/CreateUserView.fxml
+++ b/src/view/CreateUserView.fxml
@@ -17,7 +17,7 @@
             <Insets left="25.0" top="25.0" />
          </StackPane.margin>
       </ImageView>
-      <Label text="Create a New User" textFill="LIGHTGRAY" StackPane.alignment="TOP_RIGHT">
+      <Label fx:id="newUserLabel" text="Create a New User" textFill="LIGHTGRAY" StackPane.alignment="TOP_RIGHT">
          <font>
             <Font size="48.0" />
          </font>
