--- a/src/view/CreateUserView.fxml
+++ b/src/view/CreateUserView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
@@ -7,7 +8,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane fx:id="panel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="panel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" styleClass="createbg" stylesheets="@CreateUserView.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
          <image>
@@ -17,7 +18,7 @@
             <Insets left="25.0" top="25.0" />
          </StackPane.margin>
       </ImageView>
-      <Label fx:id="newUserLabel" text="Create a New User" textFill="LIGHTGRAY" StackPane.alignment="TOP_RIGHT">
+      <Label fx:id="newUserLabel" text="Create a New User" textFill="#3b444b" StackPane.alignment="TOP_RIGHT">
          <font>
             <Font size="48.0" />
          </font>
@@ -46,13 +47,16 @@
             <Font size="32.0" />
          </font>
       </TextField>
-      <TextField fx:id="imgText" alignment="CENTER" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="70.0" prefWidth="500.0" promptText="Upload an Image">
+      <TextField fx:id="imgText" alignment="CENTER" editable="false" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="70.0" prefWidth="500.0" promptText="Upload an Image">
          <StackPane.margin>
             <Insets left="100.0" right="100.0" top="50.0" />
          </StackPane.margin>
          <font>
             <Font size="32.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor>
       </TextField>
       <Button mnemonicParsing="false" onAction="#uploadImg" prefHeight="70.0" prefWidth="70.0" text="^">
          <StackPane.margin>
