Added listener for the textfield in the CreateUser view

--- a/src/view/CreateUserView.fxml
+++ b/src/view/CreateUserView.fxml
@@ -39,7 +39,7 @@
                   <Insets right="100.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" onAction="#saveUser" prefHeight="70.0" prefWidth="140.0" style="-fx-border-radius: 50 50 50 50; -fx-background-color: #FFFAFA; -fx-border-color: black; -fx-background-radius: 50;" text="Save" StackPane.alignment="BOTTOM_CENTER">
+            <Button fx:id="saveButton" disable="true" mnemonicParsing="false" onAction="#saveUser" prefHeight="70.0" prefWidth="140.0" style="-fx-border-radius: 50 50 50 50; -fx-background-color: #FFFAFA; -fx-border-color: black; -fx-background-radius: 50;" text="Save" StackPane.alignment="BOTTOM_CENTER">
                <StackPane.margin>
                   <Insets bottom="140.0" />
                </StackPane.margin>
