--- a/src/view/ActivityView.fxml
+++ b/src/view/ActivityView.fxml
@@ -9,6 +9,14 @@
 
 <StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="700.0" styleClass="activitybg" stylesheets="@ActivityView.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_CENTER">
+         <image>
+            <Image url="@../resources/checkmark.png" />
+         </image>
+         <StackPane.margin>
+            <Insets left="290.0" top="150.0" />
+         </StackPane.margin>
+      </ImageView>
       <Label fx:id="nameLabel" text="First Last" textFill="#999999" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
             <Insets left="163.0" top="35.0" />
@@ -94,7 +102,7 @@
             <Insets right="25.0" top="25.0" />
          </StackPane.margin>
       </ImageView>
-      <Button mnemonicParsing="false" opacity="0.0" prefHeight="70.0" prefWidth="70.0" text="Add" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="addGoalButton" mnemonicParsing="false" onAction="#addNewGoal" opacity="0.0" prefHeight="70.0" prefWidth="70.0" text="Add" StackPane.alignment="TOP_RIGHT">
          <StackPane.margin>
             <Insets right="25.0" top="25.0" />
          </StackPane.margin>
@@ -104,5 +112,10 @@
             <Font size="36.0" />
          </font>
       </Label>
+      <Button mnemonicParsing="false" onAction="#showFinished" opacity="0.0" prefHeight="70.0" prefWidth="70.0" text="Finished" StackPane.alignment="TOP_CENTER">
+         <StackPane.margin>
+            <Insets left="290.0" top="150.0" />
+         </StackPane.margin>
+      </Button>
    </children>
 </StackPane>
