--- a/src/view/CreateGoalView.fxml
+++ b/src/view/CreateGoalView.fxml
@@ -17,9 +17,17 @@
             <Insets right="25.0" top="25.0" />
          </StackPane.margin>
       </ImageView>
+      <TextField fx:id="nameText" maxWidth="-Infinity" opacity="0.5" prefWidth="350.0" promptText="Name" StackPane.alignment="TOP_LEFT">
+         <font>
+            <Font size="32.0" />
+         </font>
+         <StackPane.margin>
+            <Insets left="163.0" top="25.0" />
+         </StackPane.margin>
+      </TextField>
       <VBox StackPane.alignment="CENTER">
          <children>
-            <Label text="Goal" StackPane.alignment="CENTER_LEFT">
+            <Label text="Goal" textFill="LIGHTGRAY" StackPane.alignment="CENTER_LEFT">
                <font>
                   <Font size="36.0" />
                </font>
@@ -27,7 +35,7 @@
                   <Insets bottom="500.0" left="25.0" />
                </StackPane.margin>
             </Label>
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="69.0" prefWidth="650.0" promptText="Numerical (days, lbs, $, etc)" StackPane.alignment="CENTER_LEFT">
+            <TextField fx:id="goalText" maxHeight="-Infinity" maxWidth="-Infinity" opacity="0.5" prefHeight="69.0" prefWidth="650.0" promptText="Numerical (days, lbs, $, etc)" StackPane.alignment="CENTER_LEFT">
                <StackPane.margin>
                   <Insets bottom="400.0" left="25.0" right="25.0" />
                </StackPane.margin>
@@ -38,7 +46,7 @@
                   <Insets bottom="20.0" top="5.0" />
                </VBox.margin>
             </TextField>
-            <Label text="Description" StackPane.alignment="CENTER_LEFT">
+            <Label text="Description" textFill="LIGHTGRAY" StackPane.alignment="CENTER_LEFT">
                <StackPane.margin>
                   <Insets bottom="310.0" left="25.0" />
                </StackPane.margin>
@@ -46,7 +54,7 @@
                   <Font size="36.0" />
                </font>
             </Label>
-            <TextArea maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="250.0" prefWidth="650.0" promptText="Maximum of 200 characters" wrapText="true" StackPane.alignment="CENTER_LEFT">
+            <TextArea fx:id="descriptionText" maxHeight="-Infinity" maxWidth="-Infinity" opacity="0.5" prefHeight="250.0" prefWidth="650.0" promptText="Maximum of 200 characters" wrapText="true" StackPane.alignment="CENTER_LEFT">
                <StackPane.margin>
                   <Insets left="25.0" right="25.0" />
                </StackPane.margin>
@@ -59,7 +67,7 @@
             </TextArea>
             <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="650.0" StackPane.alignment="CENTER">
                <children>
-                  <Label text="Start">
+                  <Label text="Start" textFill="LIGHTGRAY">
                      <font>
                         <Font size="28.0" />
                      </font>
@@ -67,12 +75,12 @@
                         <Insets right="5.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker prefHeight="49.0">
+                  <DatePicker fx:id="startDate" prefHeight="49.0">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </DatePicker>
-                  <Label text="End">
+                  <Label text="End" textFill="LIGHTGRAY">
                      <font>
                         <Font size="28.0" />
                      </font>
@@ -80,7 +88,7 @@
                         <Insets left="10.0" right="5.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker prefHeight="49.0">
+                  <DatePicker fx:id="endDate" prefHeight="49.0">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -95,20 +103,12 @@
             <Insets left="25.0" right="25.0" top="240.0" />
          </StackPane.margin>
       </VBox>
-      <TextField maxWidth="-Infinity" prefWidth="350.0" promptText="Name" StackPane.alignment="TOP_LEFT">
-         <font>
-            <Font size="32.0" />
-         </font>
-         <StackPane.margin>
-            <Insets left="163.0" top="25.0" />
-         </StackPane.margin>
-      </TextField>
-      <ComboBox prefHeight="49.0" prefWidth="150.0" promptText="Type" StackPane.alignment="TOP_LEFT">
+      <ComboBox fx:id="typeCombo" prefHeight="49.0" prefWidth="150.0" promptText="Type" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
             <Insets left="163.0" right="25.0" top="104.0" />
          </StackPane.margin>
       </ComboBox>
-      <ImageView fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
+      <ImageView fx:id="image" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
             <Insets left="25.0" top="25.0" />
          </StackPane.margin>
@@ -121,7 +121,7 @@
             <Insets right="25.0" top="25.0" />
          </StackPane.margin>
       </Button>
-      <ComboBox prefHeight="49.0" prefWidth="130.0" promptText="Status" StackPane.alignment="TOP_LEFT">
+      <ComboBox fx:id="statusCombo" prefHeight="49.0" prefWidth="130.0" promptText="Status" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
             <Insets left="323.0" top="104.0" />
          </StackPane.margin>
